syntax = "proto3";

package postgresService;

option go_package = "genproto/postgres_service";

message UserReq {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    int64 age = 4;
}
message IdMsg {
    int64 id = 1;
}

message UserRes {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    int64 age = 4;
}


message GetAlluserParams {
    int64 limit = 1;
    int64 page = 2;
    string search = 3;
    string sort_by = 4;
}


message GetAllUserResponse {
    repeated UserRes users = 1;
    int64 count = 2;
}
message error{
     
}

message req_id{
    int64 id = 1;
}
message Empty {}
service UserS{
    rpc Create(UserReq) returns(UserRes);
    rpc Update(UserReq) returns(UserRes);
    rpc Get(IdMsg) returns(UserRes);
    rpc Delete(IdMsg) returns(Empty);
    rpc Get_all(GetAlluserParams) returns(GetAllUserResponse);
}